panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_function__test_error_redefinition_of_local_with_different_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_different_type.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: duplicate definition for `x`
   ╭─[panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_different_type.c:3:15]
   │
 2 │     int x = 42;
   │         ┬  
   │         ╰── previously defined here
 3 │     int const x = 27;
   │               ┬  
   │               ╰── duplicate definition
───╯

Error: duplicate definition for `a`
   ╭─[panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_different_type.c:5:10]
   │
 4 │     int a = 0;
   │         ┬  
   │         ╰── previously defined here
 5 │     char a = 1;
   │          ┬  
   │          ╰── duplicate definition
───╯
